Fix generals get return on urls. Unassigned guests and generals endpoints
